tests/fail_nightly/missing_close_bracket.stderr
error: Missing '}' after given '{'. Literal '{' need to be escaped as '{{'
 --> $DIR/missing_close_bracket.rs:2:31
  |
2 |     sscanf::scanf!("hi", "asdf{asdf");
  |                               ^^^^^^
